# bober

./: README-PROMPT.md  README.md  pyproject.toml
src/bober/: __init__.py  bober.py  bober.toml
