[project]
name = "bober"
version = "0.1.2"
description = "Lightweight agentic loop / harness"
authors = [{name = "Maciej Obarski"}]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
rich = [
    "rich>=14.3.3",
]
test = [
    "pytest",
]

[tool.uv]
package = true

[project.scripts]
bober = "bober:main_cli"

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/bober']
